--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ body {
   color: var(--text-color-3);
   font-weight: 400;
   font-size: 15.2px;
-  font-family: Optima-Regular, Optima, PingFang SC, Microsoft YaHei, sans-serif;
+  font-family: STKaiti;
   line-height: 22px;
   letter-spacing: 0.2px;
   background: var(--background-color-1);
@@ -487,6 +487,10 @@ button {
   transition-timing-function: ease, ease, ease, ease, linear;
   transition-duration: 0.2s, 0.2s, 0.2s, 0.2s, 0.2s;
   transition-property: color, background, box-shadow, border-color, transform;
+}
+.btn:hover {
+  transform: scaleX(1.06) scaleY(1.06);
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 .btn:hover {
   color: var(--background-color-1);
@@ -731,7 +735,7 @@ button {
   box-shadow: 0 0 0.2rem var(--shadow-color);
   cursor: zoom-in;
   opacity: 1;
-  margin: 0.8rem 0 0.2rem;
+  margin: 0.8rem auto 0.2rem;
 }
 .keep-markdown-body img.hide {
   opacity: 0;
@@ -949,98 +953,98 @@ button {
   --article-aging-tips-border-color: rgba(236,195,77,0.6);
 }
 :root {
-  --toolbar-foreground: #50505c;
-  --toolbar-background: #f0f0f0;
+  --toolbar-foreground: #b5b5b5;
+  --toolbar-background: #3a3f40;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #fafafa;
-  --highlight-foreground: #535360;
-  --highlight-comment: #8e908c;
-  --highlight-red: #c82829;
-  --highlight-orange: #f5871f;
-  --highlight-yellow: #eab700;
-  --highlight-green: #718c00;
-  --highlight-aqua: #3e999f;
-  --highlight-blue: #4271ae;
-  --highlight-purple: #8959a8;
-  --highlight-gutter-color: #585865;
-  --highlight-gutter-bg-color: #f2f2f2;
+  --highlight-background: #273036;
+  --highlight-foreground: #faf5d6;
+  --highlight-comment: #76888e;
+  --highlight-red: #ee5758;
+  --highlight-orange: #ec7600;
+  --highlight-yellow: #ffcd22;
+  --highlight-green: #93c763;
+  --highlight-aqua: #458383;
+  --highlight-blue: #6e95bd;
+  --highlight-purple: #b18bb7;
+  --highlight-gutter-color: #7a979a;
+  --highlight-gutter-bg-color: #273130;
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --toolbar-foreground: #50505c;
-    --toolbar-background: #f0f0f0;
+    --toolbar-foreground: #b5b5b5;
+    --toolbar-background: #3a3f40;
     --code-foreground: #535360;
     --code-background: #f2f2f2;
-    --highlight-background: #fafafa;
-    --highlight-foreground: #535360;
-    --highlight-comment: #8e908c;
-    --highlight-red: #c82829;
-    --highlight-orange: #f5871f;
-    --highlight-yellow: #eab700;
-    --highlight-green: #718c00;
-    --highlight-aqua: #3e999f;
-    --highlight-blue: #4271ae;
-    --highlight-purple: #8959a8;
-    --highlight-gutter-color: #585865;
-    --highlight-gutter-bg-color: #f2f2f2;
+    --highlight-background: #273036;
+    --highlight-foreground: #faf5d6;
+    --highlight-comment: #76888e;
+    --highlight-red: #ee5758;
+    --highlight-orange: #ec7600;
+    --highlight-yellow: #ffcd22;
+    --highlight-green: #93c763;
+    --highlight-aqua: #458383;
+    --highlight-blue: #6e95bd;
+    --highlight-purple: #b18bb7;
+    --highlight-gutter-color: #7a979a;
+    --highlight-gutter-bg-color: #273130;
   }
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --toolbar-foreground: #bebec6;
-    --toolbar-background: #43444c;
+    --toolbar-foreground: #b1b1b1;
+    --toolbar-background: #393e3f;
     --code-foreground: #bfbfc7;
     --code-background: #32333a;
-    --highlight-background: #34343b;
-    --highlight-foreground: #bfbfc7;
-    --highlight-comment: #969896;
-    --highlight-red: #c66;
-    --highlight-orange: #de935f;
-    --highlight-yellow: #f0c674;
-    --highlight-green: #b5bd68;
-    --highlight-aqua: #8abeb7;
-    --highlight-blue: #81a2be;
-    --highlight-purple: #b294bb;
-    --highlight-gutter-color: #c1c1c9;
-    --highlight-gutter-bg-color: #32333a;
+    --highlight-background: #262f35;
+    --highlight-foreground: #f5ebad;
+    --highlight-comment: #76888e;
+    --highlight-red: #ed5152;
+    --highlight-orange: #e77400;
+    --highlight-yellow: #ffcc1c;
+    --highlight-green: #90c55f;
+    --highlight-aqua: #448080;
+    --highlight-blue: #6a92bb;
+    --highlight-purple: #ae87b5;
+    --highlight-gutter-color: #7b989b;
+    --highlight-gutter-bg-color: #26302f;
   }
 }
 .light-mode {
-  --toolbar-foreground: #50505c;
-  --toolbar-background: #f0f0f0;
+  --toolbar-foreground: #b5b5b5;
+  --toolbar-background: #3a3f40;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #fafafa;
-  --highlight-foreground: #535360;
-  --highlight-comment: #8e908c;
-  --highlight-red: #c82829;
-  --highlight-orange: #f5871f;
-  --highlight-yellow: #eab700;
-  --highlight-green: #718c00;
-  --highlight-aqua: #3e999f;
-  --highlight-blue: #4271ae;
-  --highlight-purple: #8959a8;
-  --highlight-gutter-color: #585865;
-  --highlight-gutter-bg-color: #f2f2f2;
+  --highlight-background: #273036;
+  --highlight-foreground: #faf5d6;
+  --highlight-comment: #76888e;
+  --highlight-red: #ee5758;
+  --highlight-orange: #ec7600;
+  --highlight-yellow: #ffcd22;
+  --highlight-green: #93c763;
+  --highlight-aqua: #458383;
+  --highlight-blue: #6e95bd;
+  --highlight-purple: #b18bb7;
+  --highlight-gutter-color: #7a979a;
+  --highlight-gutter-bg-color: #273130;
 }
 .dark-mode {
-  --toolbar-foreground: #bebec6;
-  --toolbar-background: #43444c;
+  --toolbar-foreground: #b1b1b1;
+  --toolbar-background: #393e3f;
   --code-foreground: #bfbfc7;
   --code-background: #32333a;
-  --highlight-background: #34343b;
-  --highlight-foreground: #bfbfc7;
-  --highlight-comment: #969896;
-  --highlight-red: #c66;
-  --highlight-orange: #de935f;
-  --highlight-yellow: #f0c674;
-  --highlight-green: #b5bd68;
-  --highlight-aqua: #8abeb7;
-  --highlight-blue: #81a2be;
-  --highlight-purple: #b294bb;
-  --highlight-gutter-color: #c1c1c9;
-  --highlight-gutter-bg-color: #32333a;
+  --highlight-background: #262f35;
+  --highlight-foreground: #f5ebad;
+  --highlight-comment: #76888e;
+  --highlight-red: #ed5152;
+  --highlight-orange: #e77400;
+  --highlight-yellow: #ffcc1c;
+  --highlight-green: #90c55f;
+  --highlight-aqua: #448080;
+  --highlight-blue: #6a92bb;
+  --highlight-purple: #ae87b5;
+  --highlight-gutter-color: #7b989b;
+  --highlight-gutter-bg-color: #26302f;
 }
 pre,
 .highlight {
@@ -1301,7 +1305,6 @@ pre .javascript .function {
   font-weight: 600;
   font-size: 0.9rem;
   font-family: "Source Code Pro", consolas, Menlo;
-  color: var(--text-color-3);
 }
 .highlight-container .code-tools-box .tool {
   -moz-user-select: none;
@@ -1312,7 +1315,6 @@ pre .javascript .function {
 }
 .highlight-container .code-tools-box .tool i {
   font-size: 0.8rem;
-  color: var(--text-color-3);
 }
 .highlight-container .code-tools-box .fold {
   padding: 0 0.4rem 0 0.2rem;
@@ -1503,98 +1505,98 @@ pre .javascript .function {
   --article-aging-tips-border-color: rgba(236,195,77,0.6);
 }
 :root {
-  --toolbar-foreground: #50505c;
-  --toolbar-background: #f0f0f0;
+  --toolbar-foreground: #b5b5b5;
+  --toolbar-background: #3a3f40;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #fafafa;
-  --highlight-foreground: #535360;
-  --highlight-comment: #8e908c;
-  --highlight-red: #c82829;
-  --highlight-orange: #f5871f;
-  --highlight-yellow: #eab700;
-  --highlight-green: #718c00;
-  --highlight-aqua: #3e999f;
-  --highlight-blue: #4271ae;
-  --highlight-purple: #8959a8;
-  --highlight-gutter-color: #585865;
-  --highlight-gutter-bg-color: #f2f2f2;
+  --highlight-background: #273036;
+  --highlight-foreground: #faf5d6;
+  --highlight-comment: #76888e;
+  --highlight-red: #ee5758;
+  --highlight-orange: #ec7600;
+  --highlight-yellow: #ffcd22;
+  --highlight-green: #93c763;
+  --highlight-aqua: #458383;
+  --highlight-blue: #6e95bd;
+  --highlight-purple: #b18bb7;
+  --highlight-gutter-color: #7a979a;
+  --highlight-gutter-bg-color: #273130;
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --toolbar-foreground: #50505c;
-    --toolbar-background: #f0f0f0;
+    --toolbar-foreground: #b5b5b5;
+    --toolbar-background: #3a3f40;
     --code-foreground: #535360;
     --code-background: #f2f2f2;
-    --highlight-background: #fafafa;
-    --highlight-foreground: #535360;
-    --highlight-comment: #8e908c;
-    --highlight-red: #c82829;
-    --highlight-orange: #f5871f;
-    --highlight-yellow: #eab700;
-    --highlight-green: #718c00;
-    --highlight-aqua: #3e999f;
-    --highlight-blue: #4271ae;
-    --highlight-purple: #8959a8;
-    --highlight-gutter-color: #585865;
-    --highlight-gutter-bg-color: #f2f2f2;
+    --highlight-background: #273036;
+    --highlight-foreground: #faf5d6;
+    --highlight-comment: #76888e;
+    --highlight-red: #ee5758;
+    --highlight-orange: #ec7600;
+    --highlight-yellow: #ffcd22;
+    --highlight-green: #93c763;
+    --highlight-aqua: #458383;
+    --highlight-blue: #6e95bd;
+    --highlight-purple: #b18bb7;
+    --highlight-gutter-color: #7a979a;
+    --highlight-gutter-bg-color: #273130;
   }
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --toolbar-foreground: #bebec6;
-    --toolbar-background: #43444c;
+    --toolbar-foreground: #b1b1b1;
+    --toolbar-background: #393e3f;
     --code-foreground: #bfbfc7;
     --code-background: #32333a;
-    --highlight-background: #34343b;
-    --highlight-foreground: #bfbfc7;
-    --highlight-comment: #969896;
-    --highlight-red: #c66;
-    --highlight-orange: #de935f;
-    --highlight-yellow: #f0c674;
-    --highlight-green: #b5bd68;
-    --highlight-aqua: #8abeb7;
-    --highlight-blue: #81a2be;
-    --highlight-purple: #b294bb;
-    --highlight-gutter-color: #c1c1c9;
-    --highlight-gutter-bg-color: #32333a;
+    --highlight-background: #262f35;
+    --highlight-foreground: #f5ebad;
+    --highlight-comment: #76888e;
+    --highlight-red: #ed5152;
+    --highlight-orange: #e77400;
+    --highlight-yellow: #ffcc1c;
+    --highlight-green: #90c55f;
+    --highlight-aqua: #448080;
+    --highlight-blue: #6a92bb;
+    --highlight-purple: #ae87b5;
+    --highlight-gutter-color: #7b989b;
+    --highlight-gutter-bg-color: #26302f;
   }
 }
 .light-mode {
-  --toolbar-foreground: #50505c;
-  --toolbar-background: #f0f0f0;
+  --toolbar-foreground: #b5b5b5;
+  --toolbar-background: #3a3f40;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #fafafa;
-  --highlight-foreground: #535360;
-  --highlight-comment: #8e908c;
-  --highlight-red: #c82829;
-  --highlight-orange: #f5871f;
-  --highlight-yellow: #eab700;
-  --highlight-green: #718c00;
-  --highlight-aqua: #3e999f;
-  --highlight-blue: #4271ae;
-  --highlight-purple: #8959a8;
-  --highlight-gutter-color: #585865;
-  --highlight-gutter-bg-color: #f2f2f2;
+  --highlight-background: #273036;
+  --highlight-foreground: #faf5d6;
+  --highlight-comment: #76888e;
+  --highlight-red: #ee5758;
+  --highlight-orange: #ec7600;
+  --highlight-yellow: #ffcd22;
+  --highlight-green: #93c763;
+  --highlight-aqua: #458383;
+  --highlight-blue: #6e95bd;
+  --highlight-purple: #b18bb7;
+  --highlight-gutter-color: #7a979a;
+  --highlight-gutter-bg-color: #273130;
 }
 .dark-mode {
-  --toolbar-foreground: #bebec6;
-  --toolbar-background: #43444c;
+  --toolbar-foreground: #b1b1b1;
+  --toolbar-background: #393e3f;
   --code-foreground: #bfbfc7;
   --code-background: #32333a;
-  --highlight-background: #34343b;
-  --highlight-foreground: #bfbfc7;
-  --highlight-comment: #969896;
-  --highlight-red: #c66;
-  --highlight-orange: #de935f;
-  --highlight-yellow: #f0c674;
-  --highlight-green: #b5bd68;
-  --highlight-aqua: #8abeb7;
-  --highlight-blue: #81a2be;
-  --highlight-purple: #b294bb;
-  --highlight-gutter-color: #c1c1c9;
-  --highlight-gutter-bg-color: #32333a;
+  --highlight-background: #262f35;
+  --highlight-foreground: #f5ebad;
+  --highlight-comment: #76888e;
+  --highlight-red: #ed5152;
+  --highlight-orange: #e77400;
+  --highlight-yellow: #ffcc1c;
+  --highlight-green: #90c55f;
+  --highlight-aqua: #448080;
+  --highlight-blue: #6a92bb;
+  --highlight-purple: #ae87b5;
+  --highlight-gutter-color: #7b989b;
+  --highlight-gutter-bg-color: #26302f;
 }
 .page-container {
   position: relative;
@@ -2008,6 +2010,9 @@ pre .javascript .function {
   background: var(--background-color-1);
   box-shadow: 2px 2px 5px var(--shadow-color);
 }
+.header-wrapper:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 .header-wrapper .header-content {
   position: relative;
   z-index: 1005;
@@ -2295,6 +2300,10 @@ pre .javascript .function {
 .post-tools-container .tools-list li:last-child {
   margin-bottom: 0;
 }
+.post-tools-container .tools-list li:hover {
+  transform: scaleX(1.06) scaleY(1.06);
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 .post-tools-container .tools-list li.toggle-show-toc {
   display: none;
 }
@@ -2379,6 +2388,25 @@ pre .javascript .function {
 .side-tools-container .side-tools-list.show {
   transform: translateX(0);
   opacity: 1;
+}
+.side-tools-container .exposed-tools-list .tool-scroll-to-top {
+  display: none;
+}
+.side-tools-container .exposed-tools-list .tool-scroll-to-top.show {
+  display: flex;
+}
+.side-tools-container .exposed-tools-list .tool-scroll-to-top:hover .percent {
+  display: none;
+}
+.side-tools-container .exposed-tools-list .tool-scroll-to-top:hover .arrow-up {
+  display: flex;
+}
+.side-tools-container .exposed-tools-list .tool-scroll-to-top .arrow-up {
+  display: none;
+}
+.side-tools-container .exposed-tools-list .tool-scroll-to-top .percent {
+  display: flex;
+  font-size: 1rem;
 }
 .archive-list-container .archive-item {
   margin-bottom: 38px;
@@ -2508,6 +2536,9 @@ pre .javascript .function {
     margin-bottom: 1.2rem;
   }
 }
+.page-template-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 @media (max-width: 800px) {
   .page-template-container {
     padding: 1.6rem;
@@ -2538,17 +2569,6 @@ pre .javascript .function {
   height: 100vh;
   overflow: hidden;
   background: url("/images/bg.svg") center center/cover no-repeat;
-  background-position-y: 70px;
-}
-@media (max-width: 800px) {
-  .first-screen-container {
-    background-position-y: 63px;
-  }
-}
-@media (max-width: 500px) {
-  .first-screen-container {
-    background-position-y: 56px;
-  }
 }
 .first-screen-container .content {
   position: relative;
@@ -2632,6 +2652,9 @@ pre .javascript .function {
   background: var(--content-background-color);
   border-radius: 0.4rem;
   box-shadow: 2px 2px 5px var(--shadow-color);
+}
+.category-list-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 @media (max-width: 800px) {
   .category-list-container {
@@ -2826,6 +2849,10 @@ pre .javascript .function {
     margin-bottom: 22.8px;
   }
 }
+.home-content-container .home-article-list .home-article-item:hover {
+  transform: scaleX(1.015) scaleY(1.015);
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 @media (max-width: 800px) {
   .home-content-container .home-article-list .home-article-item {
     padding: 22.400000000000002px;
@@ -2940,6 +2967,9 @@ pre .javascript .function {
     margin-bottom: 1.2rem;
   }
 }
+.archive-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 @media (max-width: 800px) {
   .archive-container {
     padding: 1.6rem;
@@ -2995,6 +3025,9 @@ pre .javascript .function {
   .post-page-container .article-content-container {
     margin-bottom: 1.2rem;
   }
+}
+.post-page-container .article-content-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 @media (max-width: 800px) {
   .post-page-container .article-content-container {
@@ -3168,6 +3201,11 @@ pre .javascript .function {
   transition-duration: 0.2s, 0.2s, 0.2s, 0.2s, 0.2s;
   transition-property: color, background, box-shadow, border-color, transform;
 }
+.post-page-container .article-content-container .article-nav .article-prev:hover,
+.post-page-container .article-content-container .article-nav .article-next:hover {
+  transform: scaleX(1.03) scaleY(1.03);
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 @media (max-width: 800px) {
   .post-page-container .article-content-container .article-nav .article-prev,
   .post-page-container .article-content-container .article-nav .article-next {
@@ -3277,6 +3315,9 @@ pre .javascript .function {
     margin-bottom: 1.2rem;
   }
 }
+.category-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 @media (max-width: 800px) {
   .category-container {
     padding: 1.6rem;
@@ -3328,6 +3369,9 @@ pre .javascript .function {
     margin-bottom: 1.2rem;
   }
 }
+.tag-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
+}
 @media (max-width: 800px) {
   .tag-container {
     padding: 1.6rem;
@@ -3367,6 +3411,9 @@ pre .javascript .function {
   background: var(--content-background-color);
   border-radius: 0.4rem;
   box-shadow: 2px 2px 5px var(--shadow-color);
+}
+.tagcloud-container:hover {
+  box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 @media (max-width: 800px) {
   .tagcloud-container {
