--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ body {
   color: var(--text-color-3);
   font-weight: 400;
   font-size: 15.2px;
-  font-family: STKaiti;
+  font-family: Optima-Regular, Optima, PingFang SC, Microsoft YaHei, sans-serif;
   line-height: 22px;
   letter-spacing: 0.2px;
   background: var(--background-color-1);
@@ -489,7 +489,6 @@ button {
   transition-property: color, background, box-shadow, border-color, transform;
 }
 .btn:hover {
-  transform: scaleX(1.06) scaleY(1.06);
   box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 .btn:hover {
@@ -735,7 +734,7 @@ button {
   box-shadow: 0 0 0.2rem var(--shadow-color);
   cursor: zoom-in;
   opacity: 1;
-  margin: 0.8rem auto 0.2rem;
+  margin: 0.8rem 0 0.2rem;
 }
 .keep-markdown-body img.hide {
   opacity: 0;
@@ -953,98 +952,98 @@ button {
   --article-aging-tips-border-color: rgba(236,195,77,0.6);
 }
 :root {
-  --toolbar-foreground: #b5b5b5;
-  --toolbar-background: #3a3f40;
+  --toolbar-foreground: #50505c;
+  --toolbar-background: #f0f0f0;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #273036;
-  --highlight-foreground: #faf5d6;
-  --highlight-comment: #76888e;
-  --highlight-red: #ee5758;
-  --highlight-orange: #ec7600;
-  --highlight-yellow: #ffcd22;
-  --highlight-green: #93c763;
-  --highlight-aqua: #458383;
-  --highlight-blue: #6e95bd;
-  --highlight-purple: #b18bb7;
-  --highlight-gutter-color: #7a979a;
-  --highlight-gutter-bg-color: #273130;
+  --highlight-background: #fafafa;
+  --highlight-foreground: #535360;
+  --highlight-comment: #8e908c;
+  --highlight-red: #c82829;
+  --highlight-orange: #f5871f;
+  --highlight-yellow: #eab700;
+  --highlight-green: #718c00;
+  --highlight-aqua: #3e999f;
+  --highlight-blue: #4271ae;
+  --highlight-purple: #8959a8;
+  --highlight-gutter-color: #585865;
+  --highlight-gutter-bg-color: #f2f2f2;
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --toolbar-foreground: #b5b5b5;
-    --toolbar-background: #3a3f40;
+    --toolbar-foreground: #50505c;
+    --toolbar-background: #f0f0f0;
     --code-foreground: #535360;
     --code-background: #f2f2f2;
-    --highlight-background: #273036;
-    --highlight-foreground: #faf5d6;
-    --highlight-comment: #76888e;
-    --highlight-red: #ee5758;
-    --highlight-orange: #ec7600;
-    --highlight-yellow: #ffcd22;
-    --highlight-green: #93c763;
-    --highlight-aqua: #458383;
-    --highlight-blue: #6e95bd;
-    --highlight-purple: #b18bb7;
-    --highlight-gutter-color: #7a979a;
-    --highlight-gutter-bg-color: #273130;
+    --highlight-background: #fafafa;
+    --highlight-foreground: #535360;
+    --highlight-comment: #8e908c;
+    --highlight-red: #c82829;
+    --highlight-orange: #f5871f;
+    --highlight-yellow: #eab700;
+    --highlight-green: #718c00;
+    --highlight-aqua: #3e999f;
+    --highlight-blue: #4271ae;
+    --highlight-purple: #8959a8;
+    --highlight-gutter-color: #585865;
+    --highlight-gutter-bg-color: #f2f2f2;
   }
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --toolbar-foreground: #b1b1b1;
-    --toolbar-background: #393e3f;
+    --toolbar-foreground: #bebec6;
+    --toolbar-background: #43444c;
     --code-foreground: #bfbfc7;
     --code-background: #32333a;
-    --highlight-background: #262f35;
-    --highlight-foreground: #f5ebad;
-    --highlight-comment: #76888e;
-    --highlight-red: #ed5152;
-    --highlight-orange: #e77400;
-    --highlight-yellow: #ffcc1c;
-    --highlight-green: #90c55f;
-    --highlight-aqua: #448080;
-    --highlight-blue: #6a92bb;
-    --highlight-purple: #ae87b5;
-    --highlight-gutter-color: #7b989b;
-    --highlight-gutter-bg-color: #26302f;
+    --highlight-background: #34343b;
+    --highlight-foreground: #bfbfc7;
+    --highlight-comment: #969896;
+    --highlight-red: #c66;
+    --highlight-orange: #de935f;
+    --highlight-yellow: #f0c674;
+    --highlight-green: #b5bd68;
+    --highlight-aqua: #8abeb7;
+    --highlight-blue: #81a2be;
+    --highlight-purple: #b294bb;
+    --highlight-gutter-color: #c1c1c9;
+    --highlight-gutter-bg-color: #32333a;
   }
 }
 .light-mode {
-  --toolbar-foreground: #b5b5b5;
-  --toolbar-background: #3a3f40;
+  --toolbar-foreground: #50505c;
+  --toolbar-background: #f0f0f0;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #273036;
-  --highlight-foreground: #faf5d6;
-  --highlight-comment: #76888e;
-  --highlight-red: #ee5758;
-  --highlight-orange: #ec7600;
-  --highlight-yellow: #ffcd22;
-  --highlight-green: #93c763;
-  --highlight-aqua: #458383;
-  --highlight-blue: #6e95bd;
-  --highlight-purple: #b18bb7;
-  --highlight-gutter-color: #7a979a;
-  --highlight-gutter-bg-color: #273130;
+  --highlight-background: #fafafa;
+  --highlight-foreground: #535360;
+  --highlight-comment: #8e908c;
+  --highlight-red: #c82829;
+  --highlight-orange: #f5871f;
+  --highlight-yellow: #eab700;
+  --highlight-green: #718c00;
+  --highlight-aqua: #3e999f;
+  --highlight-blue: #4271ae;
+  --highlight-purple: #8959a8;
+  --highlight-gutter-color: #585865;
+  --highlight-gutter-bg-color: #f2f2f2;
 }
 .dark-mode {
-  --toolbar-foreground: #b1b1b1;
-  --toolbar-background: #393e3f;
+  --toolbar-foreground: #bebec6;
+  --toolbar-background: #43444c;
   --code-foreground: #bfbfc7;
   --code-background: #32333a;
-  --highlight-background: #262f35;
-  --highlight-foreground: #f5ebad;
-  --highlight-comment: #76888e;
-  --highlight-red: #ed5152;
-  --highlight-orange: #e77400;
-  --highlight-yellow: #ffcc1c;
-  --highlight-green: #90c55f;
-  --highlight-aqua: #448080;
-  --highlight-blue: #6a92bb;
-  --highlight-purple: #ae87b5;
-  --highlight-gutter-color: #7b989b;
-  --highlight-gutter-bg-color: #26302f;
+  --highlight-background: #34343b;
+  --highlight-foreground: #bfbfc7;
+  --highlight-comment: #969896;
+  --highlight-red: #c66;
+  --highlight-orange: #de935f;
+  --highlight-yellow: #f0c674;
+  --highlight-green: #b5bd68;
+  --highlight-aqua: #8abeb7;
+  --highlight-blue: #81a2be;
+  --highlight-purple: #b294bb;
+  --highlight-gutter-color: #c1c1c9;
+  --highlight-gutter-bg-color: #32333a;
 }
 pre,
 .highlight {
@@ -1305,6 +1304,7 @@ pre .javascript .function {
   font-weight: 600;
   font-size: 0.9rem;
   font-family: "Source Code Pro", consolas, Menlo;
+  color: var(--text-color-3);
 }
 .highlight-container .code-tools-box .tool {
   -moz-user-select: none;
@@ -1315,6 +1315,7 @@ pre .javascript .function {
 }
 .highlight-container .code-tools-box .tool i {
   font-size: 0.8rem;
+  color: var(--text-color-3);
 }
 .highlight-container .code-tools-box .fold {
   padding: 0 0.4rem 0 0.2rem;
@@ -1505,98 +1506,98 @@ pre .javascript .function {
   --article-aging-tips-border-color: rgba(236,195,77,0.6);
 }
 :root {
-  --toolbar-foreground: #b5b5b5;
-  --toolbar-background: #3a3f40;
+  --toolbar-foreground: #50505c;
+  --toolbar-background: #f0f0f0;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #273036;
-  --highlight-foreground: #faf5d6;
-  --highlight-comment: #76888e;
-  --highlight-red: #ee5758;
-  --highlight-orange: #ec7600;
-  --highlight-yellow: #ffcd22;
-  --highlight-green: #93c763;
-  --highlight-aqua: #458383;
-  --highlight-blue: #6e95bd;
-  --highlight-purple: #b18bb7;
-  --highlight-gutter-color: #7a979a;
-  --highlight-gutter-bg-color: #273130;
+  --highlight-background: #fafafa;
+  --highlight-foreground: #535360;
+  --highlight-comment: #8e908c;
+  --highlight-red: #c82829;
+  --highlight-orange: #f5871f;
+  --highlight-yellow: #eab700;
+  --highlight-green: #718c00;
+  --highlight-aqua: #3e999f;
+  --highlight-blue: #4271ae;
+  --highlight-purple: #8959a8;
+  --highlight-gutter-color: #585865;
+  --highlight-gutter-bg-color: #f2f2f2;
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --toolbar-foreground: #b5b5b5;
-    --toolbar-background: #3a3f40;
+    --toolbar-foreground: #50505c;
+    --toolbar-background: #f0f0f0;
     --code-foreground: #535360;
     --code-background: #f2f2f2;
-    --highlight-background: #273036;
-    --highlight-foreground: #faf5d6;
-    --highlight-comment: #76888e;
-    --highlight-red: #ee5758;
-    --highlight-orange: #ec7600;
-    --highlight-yellow: #ffcd22;
-    --highlight-green: #93c763;
-    --highlight-aqua: #458383;
-    --highlight-blue: #6e95bd;
-    --highlight-purple: #b18bb7;
-    --highlight-gutter-color: #7a979a;
-    --highlight-gutter-bg-color: #273130;
+    --highlight-background: #fafafa;
+    --highlight-foreground: #535360;
+    --highlight-comment: #8e908c;
+    --highlight-red: #c82829;
+    --highlight-orange: #f5871f;
+    --highlight-yellow: #eab700;
+    --highlight-green: #718c00;
+    --highlight-aqua: #3e999f;
+    --highlight-blue: #4271ae;
+    --highlight-purple: #8959a8;
+    --highlight-gutter-color: #585865;
+    --highlight-gutter-bg-color: #f2f2f2;
   }
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --toolbar-foreground: #b1b1b1;
-    --toolbar-background: #393e3f;
+    --toolbar-foreground: #bebec6;
+    --toolbar-background: #43444c;
     --code-foreground: #bfbfc7;
     --code-background: #32333a;
-    --highlight-background: #262f35;
-    --highlight-foreground: #f5ebad;
-    --highlight-comment: #76888e;
-    --highlight-red: #ed5152;
-    --highlight-orange: #e77400;
-    --highlight-yellow: #ffcc1c;
-    --highlight-green: #90c55f;
-    --highlight-aqua: #448080;
-    --highlight-blue: #6a92bb;
-    --highlight-purple: #ae87b5;
-    --highlight-gutter-color: #7b989b;
-    --highlight-gutter-bg-color: #26302f;
+    --highlight-background: #34343b;
+    --highlight-foreground: #bfbfc7;
+    --highlight-comment: #969896;
+    --highlight-red: #c66;
+    --highlight-orange: #de935f;
+    --highlight-yellow: #f0c674;
+    --highlight-green: #b5bd68;
+    --highlight-aqua: #8abeb7;
+    --highlight-blue: #81a2be;
+    --highlight-purple: #b294bb;
+    --highlight-gutter-color: #c1c1c9;
+    --highlight-gutter-bg-color: #32333a;
   }
 }
 .light-mode {
-  --toolbar-foreground: #b5b5b5;
-  --toolbar-background: #3a3f40;
+  --toolbar-foreground: #50505c;
+  --toolbar-background: #f0f0f0;
   --code-foreground: #535360;
   --code-background: #f2f2f2;
-  --highlight-background: #273036;
-  --highlight-foreground: #faf5d6;
-  --highlight-comment: #76888e;
-  --highlight-red: #ee5758;
-  --highlight-orange: #ec7600;
-  --highlight-yellow: #ffcd22;
-  --highlight-green: #93c763;
-  --highlight-aqua: #458383;
-  --highlight-blue: #6e95bd;
-  --highlight-purple: #b18bb7;
-  --highlight-gutter-color: #7a979a;
-  --highlight-gutter-bg-color: #273130;
+  --highlight-background: #fafafa;
+  --highlight-foreground: #535360;
+  --highlight-comment: #8e908c;
+  --highlight-red: #c82829;
+  --highlight-orange: #f5871f;
+  --highlight-yellow: #eab700;
+  --highlight-green: #718c00;
+  --highlight-aqua: #3e999f;
+  --highlight-blue: #4271ae;
+  --highlight-purple: #8959a8;
+  --highlight-gutter-color: #585865;
+  --highlight-gutter-bg-color: #f2f2f2;
 }
 .dark-mode {
-  --toolbar-foreground: #b1b1b1;
-  --toolbar-background: #393e3f;
+  --toolbar-foreground: #bebec6;
+  --toolbar-background: #43444c;
   --code-foreground: #bfbfc7;
   --code-background: #32333a;
-  --highlight-background: #262f35;
-  --highlight-foreground: #f5ebad;
-  --highlight-comment: #76888e;
-  --highlight-red: #ed5152;
-  --highlight-orange: #e77400;
-  --highlight-yellow: #ffcc1c;
-  --highlight-green: #90c55f;
-  --highlight-aqua: #448080;
-  --highlight-blue: #6a92bb;
-  --highlight-purple: #ae87b5;
-  --highlight-gutter-color: #7b989b;
-  --highlight-gutter-bg-color: #26302f;
+  --highlight-background: #34343b;
+  --highlight-foreground: #bfbfc7;
+  --highlight-comment: #969896;
+  --highlight-red: #c66;
+  --highlight-orange: #de935f;
+  --highlight-yellow: #f0c674;
+  --highlight-green: #b5bd68;
+  --highlight-aqua: #8abeb7;
+  --highlight-blue: #81a2be;
+  --highlight-purple: #b294bb;
+  --highlight-gutter-color: #c1c1c9;
+  --highlight-gutter-bg-color: #32333a;
 }
 .page-container {
   position: relative;
@@ -1945,7 +1946,7 @@ pre .javascript .function {
   text-overflow: ellipsis;
 }
 .post-toc-wrap .post-toc .nav .nav-child {
-  display: none;
+  display: block;
 }
 .post-toc-wrap .post-toc .nav .active > .nav-child {
   display: block;
@@ -1998,6 +1999,61 @@ pre .javascript .function {
   left: 0;
   z-index: 1009;
   width: 100%;
+}
+.progress-bar-container .pjax-progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1008;
+  width: 0;
+  height: 2px;
+  background: var(--pjax-progress-bar-color);
+  visibility: hidden;
+  opacity: 0;
+  transition-delay: 0s, 0s, 0s, 0s, 0s, 0s;
+  transition-timing-function: ease, ease, ease, ease, linear;
+  transition-duration: 0.2s, 0.2s, 0.2s, 0.2s, 0.1s, 0.1s;
+  transition-property: color, background, box-shadow, border-color, width, opacity;
+}
+.progress-bar-container .pjax-progress-bar.show {
+  visibility: visible;
+  opacity: 1;
+}
+.progress-bar-container .pjax-progress-icon {
+  position: absolute;
+  top: 0.4rem;
+  right: 0.3rem;
+  z-index: 1008;
+  color: var(--text-color-3);
+  font-size: 1.1rem;
+  visibility: hidden;
+}
+@media (max-width: 800px) {
+  .progress-bar-container .pjax-progress-icon {
+    top: 0.3rem;
+    right: 0.2rem;
+    font-size: 1rem;
+  }
+}
+.progress-bar-container .pjax-progress-icon.show {
+  visibility: visible;
+}
+.progress-bar-container .scroll-progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1007;
+  width: 0;
+  height: 2px;
+  background: var(--primary-color);
+  visibility: hidden;
+  transition-delay: 0s, 0s, 0s, 0s, 0s;
+  transition-timing-function: ease, ease, ease, ease, linear;
+  transition-duration: 0.2s, 0.2s, 0.2s, 0.2s, 0.1s;
+  transition-property: color, background, box-shadow, border-color, width;
+}
+.progress-bar-container .scroll-progress-bar.hide {
+  display: none !important;
 }
 .header-wrapper {
   display: flex;
@@ -2301,7 +2357,6 @@ pre .javascript .function {
   margin-bottom: 0;
 }
 .post-tools-container .tools-list li:hover {
-  transform: scaleX(1.06) scaleY(1.06);
   box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 .post-tools-container .tools-list li.toggle-show-toc {
@@ -2388,25 +2443,6 @@ pre .javascript .function {
 .side-tools-container .side-tools-list.show {
   transform: translateX(0);
   opacity: 1;
-}
-.side-tools-container .exposed-tools-list .tool-scroll-to-top {
-  display: none;
-}
-.side-tools-container .exposed-tools-list .tool-scroll-to-top.show {
-  display: flex;
-}
-.side-tools-container .exposed-tools-list .tool-scroll-to-top:hover .percent {
-  display: none;
-}
-.side-tools-container .exposed-tools-list .tool-scroll-to-top:hover .arrow-up {
-  display: flex;
-}
-.side-tools-container .exposed-tools-list .tool-scroll-to-top .arrow-up {
-  display: none;
-}
-.side-tools-container .exposed-tools-list .tool-scroll-to-top .percent {
-  display: flex;
-  font-size: 1rem;
 }
 .archive-list-container .archive-item {
   margin-bottom: 38px;
@@ -2569,6 +2605,17 @@ pre .javascript .function {
   height: 100vh;
   overflow: hidden;
   background: url("/images/bg.svg") center center/cover no-repeat;
+  background-position-y: 70px;
+}
+@media (max-width: 800px) {
+  .first-screen-container {
+    background-position-y: 63px;
+  }
+}
+@media (max-width: 500px) {
+  .first-screen-container {
+    background-position-y: 56px;
+  }
 }
 .first-screen-container .content {
   position: relative;
@@ -2850,7 +2897,6 @@ pre .javascript .function {
   }
 }
 .home-content-container .home-article-list .home-article-item:hover {
-  transform: scaleX(1.015) scaleY(1.015);
   box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 @media (max-width: 800px) {
@@ -3133,6 +3179,7 @@ pre .javascript .function {
   padding-bottom: 2rem;
   color: var(--text-color-3);
   word-wrap: break-word;
+  border-bottom: 0.1rem dashed var(--border-color);
 }
 .post-page-container .article-content-container .article-content .article-aging-tips {
   position: relative;
@@ -3203,7 +3250,6 @@ pre .javascript .function {
 }
 .post-page-container .article-content-container .article-nav .article-prev:hover,
 .post-page-container .article-content-container .article-nav .article-next:hover {
-  transform: scaleX(1.03) scaleY(1.03);
   box-shadow: 2px 2px 8px var(--shadow-hover-color);
 }
 @media (max-width: 800px) {
